Created first version of webapp

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
 fastapi
 uvicorn
+pydantic
 -e ../  # editable install (changes to the code will be reflected in the package without reinstalling)
 # ../ (eventually replace above line with this line)
